--- a/EmployeeCrudAngular/src/index.html
+++ b/EmployeeCrudAngular/src/index.html
@@ -6,6 +6,10 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="assets/env.js"></script>
+  <script>
+    console.log('Valor de API_URLs:', window['env'].apiUrl);
+  </script>
 </head>
 <body>
   <app-root></app-root>
